Added latitude and longitude to the Location class (might want to switch to address?).