@@ -1,5 +1,7 @@
 package edu.umn.kill9.places.model;
 
+import com.google.android.gms.maps.model.LatLng;
+
 /**
  * User: drmaas
  * Date: 4/17/13
@@ -8,15 +10,17 @@ public class Location {
 
     private long _id;
     private String _locationName;
+    private LatLng _locationPoint; // We may want to switch to address?
 
     //default id is -1, which means its not set yet
-    public Location(String _categoryName) {
-        this(new Long(-1), _categoryName);
+    public Location(String locationName, LatLng locationPoint) {
+        this(Long.valueOf(-1), locationName, locationPoint);
     }
 
-    public Location(Long id, String locationName) {
+    public Location(Long id, String locationName, LatLng locationPoint) {
         this._id = id;
         this._locationName = locationName;
+        this._locationPoint = locationPoint;
     }
 
     public long getId() {
@@ -33,5 +37,13 @@ public class Location {
 
     public void setLocationName(String locationName) {
         this._locationName = locationName;
+    }
+
+    public LatLng getLocationPoint() {
+        return _locationPoint;
+    }
+
+    public void setLocationPoint(LatLng locationPoint) {
+        this._locationPoint = locationPoint;
     }
 }
